--- a/modules/math/test/CMakeLists.txt
+++ b/modules/math/test/CMakeLists.txt
@@ -1,8 +1,9 @@
-ADD_CXXTEST_TESTDRIVER(openma_math_array arrayTest.cpp math)
-ADD_CXXTEST_TESTDRIVER(openma_math_pose poseTest.cpp math)
-ADD_CXXTEST_TESTDRIVER(openma_math_map mapTest.cpp math)
-ADD_CXXTEST_TESTDRIVER(openma_math_blockop blockopTest.cpp math)
-ADD_CXXTEST_TESTDRIVER(openma_math_mix mixTest.cpp math)
+ADD_SUBDIRECTORY("c++")
 
-# To have access to the symbol M_PI
-SET_TARGET_PROPERTIES(test_openma_math_pose PROPERTIES COMPILE_DEFINITIONS "_USE_MATH_DEFINES")
+# IF(BUILD_MATLAB_BINDINGS)
+#   ADD_SUBDIRECTORY("matlab")
+# ENDIF()
+#
+# IF(BUILD_PYTHON_BINDINGS)
+#   ADD_SUBDIRECTORY("python")
+# ENDIF()
