Implementation of the force platform type 3. WARNING: The computation of the COP is not yet validated!

--- a/modules/instrument/CMakeLists.txt
+++ b/modules/instrument/CMakeLists.txt
@@ -1,6 +1,7 @@
 SET(OPENMA_INSTRUMENT_SRCS
   src/forceplate.cpp
   src/forceplatetype2.cpp
+  src/forceplatetype3.cpp
   src/forceplatetype4.cpp
   src/forceplatetype5.cpp
 )
