[WIP] New skeleton helper class ma::body::InternationalSocietyBiomechanics to represent the biomechanical model associated with the ISB markers set.

--- a/modules/body/CMakeLists.txt
+++ b/modules/body/CMakeLists.txt
@@ -10,6 +10,7 @@ SET(OPENMA_BODY_SRCS
   src/simplegaitforceplatetofeetassigner.cpp
   src/inertialparameters.cpp
   src/inertialparametersestimator.cpp
+  src/internationalsocietybiomechanics.cpp
   src/inversedynamicsmatrix.cpp
   src/inversedynamicsprocessor.cpp
   src/joint.cpp
