--- a/modules/body/test/c++/CMakeLists.txt
+++ b/modules/body/test/c++/CMakeLists.txt
@@ -8,6 +8,7 @@ ADD_CXXTEST_TESTDRIVER(openma_body_eulerdescriptor eulerdescriptorTest.cpp body)
 ADD_CXXTEST_TESTDRIVER(openma_body_inertialparametersTest inertialparametersTest.cpp body)
 ADD_CXXTEST_TESTDRIVER(openma_body_inversedynamicsmatrix inversedynamicsmatrixTest.cpp body)
 ADD_CXXTEST_TESTDRIVER(openma_body_internationalsocietybiomechanics_calibration internationalsocietybiomechanicsTest_calibration.cpp INCLUDES ${_TEST_IO_CPP_DIR} LIBRARIES body io)
+ADD_CXXTEST_TESTDRIVER(openma_body_internationalsocietybiomechanics_reconstruction internationalsocietybiomechanicsTest_reconstruction.cpp INCLUDES ${_TEST_IO_CPP_DIR} LIBRARIES body io)
 ADD_CXXTEST_TESTDRIVER(openma_body_joint jointTest.cpp body)
 ADD_CXXTEST_TESTDRIVER(openma_body_landmarkstranslator landmarkstranslatorTest.cpp body)
 ADD_CXXTEST_TESTDRIVER(openma_body_model modelTest.cpp body)
