Force plates classes wrapped.

--- a/modules/instrument/swig/CMakeLists.txt
+++ b/modules/instrument/swig/CMakeLists.txt
@@ -1,6 +1,10 @@
 SET_SOURCE_FILES_PROPERTIES("instrument.i" PROPERTIES CPLUSPLUS ON)
 SET(SWIG_MODULE_instrument_EXTRA_SRCS 
-  "instrument/forceplate.i")
+  "instrument/forceplate.i"
+  "instrument/forceplatetype2.i"
+  "instrument/forceplatetype3.i"
+  "instrument/forceplatetype4.i"
+  "instrument/forceplatetype5.i")
 SET(SWIG_MODULE_instrument_EXTRA_FLAGS
   # "-debug-tmsearch"
   "-I${PROJECT_SOURCE_DIR}/modules/base/swig"
@@ -13,7 +17,9 @@ IF(BUILD_MATLAB_BINDINGS)
     "../../bindings/include/openma/matlab/mexFunction.def")
   SET(CMAKE_SWIG_OUTDIR "${OPENMA_EXECUTABLE_PATH}/swig/matlab/openma")
   SET_SOURCE_FILES_PROPERTIES("instrument.i" PROPERTIES CPLUSPLUS ON)
-  SET(SWIG_MODULE_instrumentMEX_EXTRA_DEPS ${SWIG_MODULE_instrument_EXTRA_SRCS})
+  SET(SWIG_MODULE_instrumentMEX_EXTRA_DEPS 
+    ${SWIG_MODULE_instrument_EXTRA_SRCS}
+    "instrument_matlab.i")
   SET(SWIG_MODULE_instrumentMEX_EXTRA_FLAGS
     "-module" "ma.instrument"
     "-mexname" "instrumentMEX"
@@ -33,7 +39,9 @@ IF(BUILD_PYTHON_BINDINGS)
   SET(BASE_PYTHON_SRCS
     "instrument.i")
   SET(CMAKE_SWIG_OUTDIR "${OPENMA_EXECUTABLE_PATH}/swig/python/openma/ma")
-  SET(SWIG_MODULE_instrument_EXTRA_DEPS ${SWIG_MODULE_instrument_EXTRA_SRCS})
+  SET(SWIG_MODULE_instrument_EXTRA_DEPS
+    ${SWIG_MODULE_instrument_EXTRA_SRCS}
+    "instrument_python.i")
   SET(SWIG_MODULE_instrument_EXTRA_FLAGS
     ${SWIG_MODULE_instrument_EXTRA_FLAGS}
     "-I${SWIG_DIR}/Lib/python")
