Wrapping of the methods specific to the class ForcePlateType3.

--- a/modules/instrument/test/matlab/CMakeLists.txt
+++ b/modules/instrument/test/matlab/CMakeLists.txt
@@ -3,3 +3,4 @@ SET(TESTS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
 SET(MTD_DIRS ${TOOLBOX_DIRECTORY} ${TESTS_DIRECTORY})
 
 ADD_MATLAB_TESTDRIVER(matlab_instrument_forceplatetype5 ForcePlateType5Test.m INCLUDES ${MTD_DIRS})
+ADD_MATLAB_TESTDRIVER(matlab_instrument_forceplatetype3 ForcePlateType3Test.m INCLUDES ${MTD_DIRS})
