New unit tests for the language bindings.

--- a/modules/base/test/matlab/CMakeLists.txt
+++ b/modules/base/test/matlab/CMakeLists.txt
@@ -3,6 +3,7 @@ SET(TESTS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
 SET(MTD_DIRS ${TOOLBOX_DIRECTORY} ${TESTS_DIRECTORY})
 
 ADD_MATLAB_TESTDRIVER(matlab_base_any AnyTest.m INCLUDES ${MTD_DIRS})
+ADD_MATLAB_TESTDRIVER(matlab_base_event EventTest.m INCLUDES ${MTD_DIRS})
 ADD_MATLAB_TESTDRIVER(matlab_base_node NodeTest.m INCLUDES ${MTD_DIRS})
 ADD_MATLAB_TESTDRIVER(matlab_base_timesequence TimeSequenceTest.m INCLUDES ${MTD_DIRS})
 ADD_MATLAB_TESTDRIVER(matlab_base_trial TrialTest.m INCLUDES ${MTD_DIRS})
