--- a/modules/base/test/python/CMakeLists.txt
+++ b/modules/base/test/python/CMakeLists.txt
@@ -3,5 +3,6 @@ SET(TESTS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
 SET(PTD_DIRS ${PACKAGE_DIRECTORY} ${TESTS_DIRECTORY})
 
 ADD_PYTHON_TESTDRIVER(python_base_any anyTest INCLUDES ${PTD_DIRS})
+ADD_PYTHON_TESTDRIVER(python_base_event eventTest INCLUDES ${PTD_DIRS})
 ADD_PYTHON_TESTDRIVER(python_base_node nodeTest INCLUDES ${PTD_DIRS})
 ADD_PYTHON_TESTDRIVER(python_base_timesequence timeSequenceTest INCLUDES ${PTD_DIRS})
