--- a/modules/body/test/c++/CMakeLists.txt
+++ b/modules/body/test/c++/CMakeLists.txt
@@ -11,6 +11,7 @@ ADD_CXXTEST_TESTDRIVER(openma_body_internationalsocietybiomechanics_calibration 
 ADD_CXXTEST_TESTDRIVER(openma_body_internationalsocietybiomechanics_reconstruction internationalsocietybiomechanicsTest_reconstruction.cpp INCLUDES ${_TEST_IO_CPP_DIR} LIBRARIES body io)
 ADD_CXXTEST_TESTDRIVER(openma_body_internationalsocietybiomechanics_kinematics internationalsocietybiomechanicsTest_kinematics.cpp INCLUDES ${_TEST_IO_CPP_DIR} LIBRARIES body io)
 ADD_CXXTEST_TESTDRIVER(openma_body_joint jointTest.cpp body)
+ADD_CXXTEST_TESTDRIVER(openma_body_landmarksregistrar landmarksregistrarTest.cpp body)
 ADD_CXXTEST_TESTDRIVER(openma_body_landmarkstranslator landmarkstranslatorTest.cpp body)
 ADD_CXXTEST_TESTDRIVER(openma_body_model modelTest.cpp body)
 ADD_CXXTEST_TESTDRIVER(openma_body_plugingait plugingaitTest.cpp body)
@@ -19,6 +20,7 @@ ADD_CXXTEST_TESTDRIVER(openma_body_plugingait_reconstruction plugingaitTest_reco
 ADD_CXXTEST_TESTDRIVER(openma_body_plugingait_kinematics plugingaitTest_kinematics.cpp INCLUDES ${_TEST_IO_CPP_DIR} LIBRARIES body io)
 ADD_CXXTEST_TESTDRIVER(openma_body_plugingait_kinetics plugingaitTest_kinetics.cpp INCLUDES ${_TEST_IO_CPP_DIR} LIBRARIES body io)
 ADD_CXXTEST_TESTDRIVER(openma_body_point pointTest.cpp body)
+ADD_CXXTEST_TESTDRIVER(openma_body_registermarkerclusterTest registermarkerclusterTest.cpp body)
 ADD_CXXTEST_TESTDRIVER(openma_body_segment segmentTest.cpp body)
 ADD_CXXTEST_TESTDRIVER(openma_body_simplegaitforceplatetofeetassigner simplegaitforceplatetofeetassignerTest.cpp INCLUDES ${_TEST_IO_CPP_DIR} LIBRARIES body io)
 ADD_CXXTEST_TESTDRIVER(openma_body_skeletonhelper skeletonhelperTest.cpp body)
