New internal CMake variable and associated C++ macro to activate the reference count mechanism used by the bindings.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -115,6 +115,7 @@ OPTION(BUILD_MATLAB_BINDINGS "Build bindings to use OpenMA in Matlab." OFF)
 OPTION(BUILD_PYTHON_BINDINGS "Build bindings to use OpenMA in Python." OFF)
 IF(BUILD_MATLAB_BINDINGS OR BUILD_PYTHON_BINDINGS)
   SET(BUILD_LANGUAGE_BINDINGS 1)
+  SET(USE_REFCOUNT_MECHANISM 1)
   INCLUDE(${OPENMA_CMAKE_MODULE_PATH}/OpenMALanguageBindings.cmake)
 ELSE()
   SET(BUILD_LANGUAGE_BINDINGS 0)
