--- a/modules/body/test/matlab/CMakeLists.txt
+++ b/modules/body/test/matlab/CMakeLists.txt
@@ -1,5 +1,6 @@
 SET(TOOLBOX_DIRECTORY "${EXECUTABLE_OUTPUT_PATH}/swig/matlab/openma")
 SET(TESTS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
-SET(MTD_DIRS ${TOOLBOX_DIRECTORY} ${TESTS_DIRECTORY})
+SET(MTD_DIRS ${TOOLBOX_DIRECTORY} ${TESTS_DIRECTORY} "${CMAKE_BINARY_DIR}/modules/io/test/matlab")
 
 ADD_MATLAB_TESTDRIVER(matlab_body_landmarkstranslator LandmarksTranslatorTest.m INCLUDES ${MTD_DIRS})
+ADD_MATLAB_TESTDRIVER(matlab_body_plugingait PluginGaitTest.m INCLUDES ${MTD_DIRS})
