Wrong source folder for CircleCI.

--- a/circle.yml
+++ b/circle.yml
@@ -24,7 +24,7 @@ dependencies:
       fi
   override:
     - mkdir build && cd build
-    - cmake -DCMAKE_BUILD_TYPE:CHAR=Release -DBUILD_SHARED_LIBS:BOOL=1 -DBUILD_UNIT_TESTS:BOOL=1 -DOPENMA_TESTING_DATA_PATH:CHAR=/home/ubuntu/data -G "Unix Makefiles" ..
+    - cmake -DCMAKE_BUILD_TYPE:CHAR=Release -DBUILD_SHARED_LIBS:BOOL=1 -DBUILD_UNIT_TESTS:BOOL=1 -DOPENMA_TESTING_DATA_PATH:CHAR=/home/ubuntu/data -G "Unix Makefiles" /home/ubuntu/openma
     - make
 
 ## Customize test commands
