--- a/modules/io/test/c++/CMakeLists.txt
+++ b/modules/io/test/c++/CMakeLists.txt
@@ -17,3 +17,4 @@ ADD_CXXTEST_TESTDRIVER(openma_io_file fileTest.cpp io)
 ADD_CXXTEST_TESTDRIVER(openma_io_handlerplugin handlerpluginTest.cpp io)
 ADD_CXXTEST_TESTDRIVER(openma_io_handlerplugin_reader_c3d trial/c3dreaderTest.cpp io)
 ADD_CXXTEST_TESTDRIVER(openma_io_handlerplugin_writer_c3d trial/c3dwriterTest.cpp io)
+ADD_CXXTEST_TESTDRIVER(openma_io_handlerplugin_reader_elite_emg trial/eliteemgreaderTest.cpp io)
