The helper ma::body::InternationalSocietyBiomechanics was renamed LyonWholeBodyModel as suggested by the orginal authors.

--- a/modules/body/CMakeLists.txt
+++ b/modules/body/CMakeLists.txt
@@ -10,7 +10,7 @@ SET(OPENMA_BODY_SRCS
   src/externalwrenchassigner.cpp
   src/inertialparameters.cpp
   src/inertialparametersestimator.cpp
-  src/internationalsocietybiomechanics.cpp
+  src/lyonwholebodymodel.cpp
   src/inversedynamicsmatrix.cpp
   src/inversedynamicsprocessor.cpp
   src/joint.cpp
