[WIP] Unit tests for the function Eigen::detect_peaks.

--- a/3rdparty/eigen3/test/CMakeLists.txt
+++ b/3rdparty/eigen3/test/CMakeLists.txt
@@ -2,6 +2,7 @@ SET(EIGEN_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/3rdparty/eigen3")
 
 ADD_CXXTEST_TESTDRIVER(eigen_comb combTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
 ADD_CXXTEST_TESTDRIVER(eigen_cumtrapz cumtrapzTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
+ADD_CXXTEST_TESTDRIVER(eigen_detectpeaks detectpeaksTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
 ADD_CXXTEST_TESTDRIVER(eigen_filter filterTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
 ADD_CXXTEST_TESTDRIVER(eigen_filtfilt filtfiltTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
 ADD_CXXTEST_TESTDRIVER(eigen_gammalb gammalnTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
