--- a/modules/processing/test/CMakeLists.txt
+++ b/modules/processing/test/CMakeLists.txt
@@ -1,1 +1,9 @@
 ADD_SUBDIRECTORY("c++")
+
+IF(BUILD_MATLAB_BINDINGS)
+  ADD_SUBDIRECTORY("matlab")
+ENDIF()
+
+IF(BUILD_PYTHON_BINDINGS)
+  ADD_SUBDIRECTORY("python")
+ENDIF()
