Fix for the issue #60.

--- a/3rdparty/eigen3/CMakeLists.txt
+++ b/3rdparty/eigen3/CMakeLists.txt
@@ -4,20 +4,20 @@ ENDIF()
 
 # Eigen
 INSTALL(DIRECTORY ${OPENMA_SOURCE_DIR}/3rdparty/eigen3/Eigen
-        INCLUDES DESTINATION include
+        DESTINATION include/eigen3/Eigen
         COMPONENT dev
         PATTERN ".DS_Store" EXCLUDE
         PATTERN "CMakeLists.txt" EXCLUDE
         PATTERN ".cpp" EXCLUDE)
 # Eigen_unsupported (extra modules)
 INSTALL(DIRECTORY ${OPENMA_SOURCE_DIR}/3rdparty/eigen3/Eigen_unsupported
-        INCLUDES DESTINATION include
+        DESTINATION include/eigen3/Eigen_unsupported
         COMPONENT dev
         PATTERN ".DS_Store" EXCLUDE
         PATTERN "CMakeLists.txt" EXCLUDE
         PATTERN ".cpp" EXCLUDE)
 # Eigen_openma (plugins and extras)
 INSTALL(DIRECTORY ${OPENMA_SOURCE_DIR}/3rdparty/eigen3/Eigen_openma
-        INCLUDES DESTINATION include
+        DESTINATION include/eigen3/Eigen_openma
         COMPONENT dev
         PATTERN ".DS_Store" EXCLUDE)
