--- a/modules/bindings/CMakeLists.txt
+++ b/modules/bindings/CMakeLists.txt
@@ -24,8 +24,7 @@ ENDIF()
 INSTALL(TARGETS bindings EXPORT OpenMATargets
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib
-  RUNTIME DESTINATION lib  
-  INCLUDES DESTINATION lib
+  RUNTIME DESTINATION bin
 )
 
 ENDIF()
