--- a/modules/math/CMakeLists.txt
+++ b/modules/math/CMakeLists.txt
@@ -9,7 +9,7 @@ TARGET_INCLUDE_DIRECTORIES(math PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/include>
   $<BUILD_INTERFACE:${OPENMA_SOURCE_DIR}/3rdparty/eigen3>
   $<INSTALL_INTERFACE:include>
-  $<INSTALL_INTERFACE:include/3rdparty/eigen3>
+  $<INSTALL_INTERFACE:include/eigen3>
 )
 GENERATE_EXPORT_HEADER(math
                        BASE_NAME OPENMA_MATHS
@@ -27,6 +27,9 @@ ENDIF()
 INSTALL(TARGETS math EXPORT OpenMATargets
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib
-  RUNTIME DESTINATION lib  
-  INCLUDES DESTINATION lib
+  RUNTIME DESTINATION bin
+)
+INSTALL(DIRECTORY include ${CMAKE_CURRENT_BINARY_DIR}/include
+  DESTINATION .
+  PATTERN "_p.h" EXCLUDE
 )
