--- a/modules/base/CMakeLists.txt
+++ b/modules/base/CMakeLists.txt
@@ -40,6 +40,9 @@ ENDIF()
 INSTALL(TARGETS base EXPORT OpenMATargets
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib
-  RUNTIME DESTINATION lib  
-  INCLUDES DESTINATION lib
+  RUNTIME DESTINATION bin
+)
+INSTALL(DIRECTORY include ${CMAKE_CURRENT_BINARY_DIR}/include
+  DESTINATION .
+  PATTERN "_p.h" EXCLUDE
 )
