--- a/modules/processing/CmakeLists.txt
+++ b/modules/processing/CmakeLists.txt
@@ -29,6 +29,9 @@ ENDIF()
 INSTALL(TARGETS processing EXPORT OpenMATargets
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib
-  RUNTIME DESTINATION lib  
-  INCLUDES DESTINATION lib
+  RUNTIME DESTINATION bin
+)
+INSTALL(DIRECTORY include ${CMAKE_CURRENT_BINARY_DIR}/include
+  DESTINATION .
+  PATTERN "_p.h" EXCLUDE
 )
