--- a/modules/base/test/python/CMakeLists.txt
+++ b/modules/base/test/python/CMakeLists.txt
@@ -6,3 +6,4 @@ ADD_PYTHON_TESTDRIVER(python_base_any anyTest INCLUDES ${PTD_DIRS})
 ADD_PYTHON_TESTDRIVER(python_base_event eventTest INCLUDES ${PTD_DIRS})
 ADD_PYTHON_TESTDRIVER(python_base_node nodeTest INCLUDES ${PTD_DIRS})
 ADD_PYTHON_TESTDRIVER(python_base_timesequence timeSequenceTest INCLUDES ${PTD_DIRS})
+ADD_PYTHON_TESTDRIVER(python_base_trial trialTest INCLUDES ${PTD_DIRS})
