--- a/modules/body/test/c++/CMakeLists.txt
+++ b/modules/body/test/c++/CMakeLists.txt
@@ -10,6 +10,7 @@ ADD_CXXTEST_TESTDRIVER(openma_body_inversedynamicsmatrix inversedynamicsmatrixTe
 ADD_CXXTEST_TESTDRIVER(openma_body_lyonwholebodymodel_calibration lyonwholebodymodelTest_calibration.cpp INCLUDES ${_TEST_IO_CPP_DIR} LIBRARIES body io)
 ADD_CXXTEST_TESTDRIVER(openma_body_lyonwholebodymodel_reconstruction lyonwholebodymodelTest_reconstruction.cpp INCLUDES ${_TEST_IO_CPP_DIR} LIBRARIES body io)
 ADD_CXXTEST_TESTDRIVER(openma_body_lyonwholebodymodel_kinematics lyonwholebodymodelTest_kinematics.cpp INCLUDES ${_TEST_IO_CPP_DIR} LIBRARIES body io)
+ADD_CXXTEST_TESTDRIVER(openma_body_lyonwholebodymodel_kinetics lyonwholebodymodelTest_kinetics.cpp INCLUDES ${_TEST_IO_CPP_DIR} LIBRARIES body io)
 ADD_CXXTEST_TESTDRIVER(openma_body_joint jointTest.cpp body)
 ADD_CXXTEST_TESTDRIVER(openma_body_landmarksregistrar landmarksregistrarTest.cpp body)
 ADD_CXXTEST_TESTDRIVER(openma_body_landmarkstranslator landmarkstranslatorTest.cpp body)
