CMake variables used by the Python bindings renamed.

--- a/modules/io/swig/CMakeLists.txt
+++ b/modules/io/swig/CMakeLists.txt
@@ -29,16 +29,17 @@ IF(BUILD_MATLAB_BINDINGS)
 ENDIF()
 
 IF(BUILD_PYTHON_BINDINGS)
-  SET(BASE_PYTHON_SRCS
+  SET(IO_PYTHON_SRCS
     "io.i")
   SET(CMAKE_SWIG_OUTDIR "${OPENMA_EXECUTABLE_PATH}/swig/python/openma/ma")
-  SET(SWIG_MODULE_io_EXTRA_DEPS ${SWIG_MODULE_io_EXTRA_SRCS})
-  SET(SWIG_MODULE_io_EXTRA_FLAGS
+  SET(SWIG_MODULE_ioPY_EXTRA_DEPS ${SWIG_MODULE_io_EXTRA_SRCS})
+  SET(SWIG_MODULE_ioPY_EXTRA_FLAGS
     ${SWIG_MODULE_io_EXTRA_FLAGS}
     "-I${SWIG_DIR}/Lib/python")
-  SWIG_ADD_MODULE(io python "${BASE_PYTHON_SRCS}")
-  SWIG_LINK_LIBRARIES(io io bindings ${PYTHON_LIBRARY})
-  TARGET_INCLUDE_DIRECTORIES(${SWIG_MODULE_io_REAL_NAME} PRIVATE "${PYTHON_INCLUDE_DIR}")
-  SET_TARGET_PROPERTIES(${SWIG_MODULE_io_REAL_NAME} PROPERTIES
+  SWIG_ADD_MODULE(ioPY python "${IO_PYTHON_SRCS}")
+  SWIG_LINK_LIBRARIES(ioPY io bindings ${PYTHON_LIBRARY})
+  TARGET_INCLUDE_DIRECTORIES(${SWIG_MODULE_ioPY_REAL_NAME} PRIVATE "${PYTHON_INCLUDE_DIR}")
+  SET_TARGET_PROPERTIES(${SWIG_MODULE_ioPY_REAL_NAME} PROPERTIES
+    OUTPUT_NAME "_io"
     LIBRARY_OUTPUT_DIRECTORY "${OPENMA_EXECUTABLE_PATH}/swig/python/openma/ma")
 ENDIF()
