--- a/modules/base/swig/CMakeLists.txt
+++ b/modules/base/swig/CMakeLists.txt
@@ -39,16 +39,17 @@ IF(BUILD_PYTHON_BINDINGS)
   SET(BASE_PYTHON_SRCS
     "ma.i")
   SET(CMAKE_SWIG_OUTDIR "${OPENMA_EXECUTABLE_PATH}/swig/python/openma/ma")
-  SET(SWIG_MODULE_ma_EXTRA_DEPS
+  SET(SWIG_MODULE_maPY_EXTRA_DEPS
     ${SWIG_MODULE_base_EXTRA_SRCS}
     "ma_python.i")
-  SET(SWIG_MODULE_ma_EXTRA_FLAGS
+  SET(SWIG_MODULE_maPY_EXTRA_FLAGS
     ${SWIG_MODULE_ma_EXTRA_FLAGS}
     "-I${SWIG_DIR}/Lib/python")
-  SWIG_ADD_MODULE(ma python "${BASE_PYTHON_SRCS}")
-  SWIG_LINK_LIBRARIES(ma base bindings ${PYTHON_LIBRARY})
-  TARGET_INCLUDE_DIRECTORIES(${SWIG_MODULE_ma_REAL_NAME} PRIVATE "${PYTHON_INCLUDE_DIR}" "${NUMPY_INCLUDE_DIR}")
-  SET_TARGET_PROPERTIES(${SWIG_MODULE_ma_REAL_NAME} PROPERTIES
+  SWIG_ADD_MODULE(maPY python "${BASE_PYTHON_SRCS}")
+  SWIG_LINK_LIBRARIES(maPY base bindings ${PYTHON_LIBRARY})
+  TARGET_INCLUDE_DIRECTORIES(${SWIG_MODULE_maPY_REAL_NAME} PRIVATE "${PYTHON_INCLUDE_DIR}" "${NUMPY_INCLUDE_DIR}")
+  SET_TARGET_PROPERTIES(${SWIG_MODULE_maPY_REAL_NAME} PROPERTIES
+    OUTPUT_NAME "_ma"
     LIBRARY_OUTPUT_DIRECTORY "${OPENMA_EXECUTABLE_PATH}/swig/python/openma/ma")
   FILE(WRITE "${OPENMA_EXECUTABLE_PATH}/swig/python/openma/ma/__init__.py" "# OpenMA ${OPENMA_VERSION_STRING}\nfrom .ma import *\n")
 ENDIF()
