--- a/modules/body/swig/CMakeLists.txt
+++ b/modules/body/swig/CMakeLists.txt
@@ -39,15 +39,16 @@ IF(BUILD_PYTHON_BINDINGS)
   SET(BODY_PYTHON_SRCS
     "body.i")
   SET(CMAKE_SWIG_OUTDIR "${OPENMA_EXECUTABLE_PATH}/swig/python/openma/ma")
-  SET(SWIG_MODULE_body_EXTRA_DEPS
+  SET(SWIG_MODULE_bodyPY_EXTRA_DEPS
     ${SWIG_MODULE_body_EXTRA_SRCS}
     "body_python.i")
-  SET(SWIG_MODULE_body_EXTRA_FLAGS
+  SET(SWIG_MODULE_bodyPY_EXTRA_FLAGS
     ${SWIG_MODULE_body_EXTRA_FLAGS}
     "-I${SWIG_DIR}/Lib/python")
-  SWIG_ADD_MODULE(body python "${BODY_PYTHON_SRCS}")
-  SWIG_LINK_LIBRARIES(body body bindings ${PYTHON_LIBRARY})
-  TARGET_INCLUDE_DIRECTORIES(${SWIG_MODULE_body_REAL_NAME} PRIVATE "${PYTHON_INCLUDE_DIR}")
-  SET_TARGET_PROPERTIES(${SWIG_MODULE_body_REAL_NAME} PROPERTIES
+  SWIG_ADD_MODULE(bodyPY python "${BODY_PYTHON_SRCS}")
+  SWIG_LINK_LIBRARIES(bodyPY body bindings ${PYTHON_LIBRARY})
+  TARGET_INCLUDE_DIRECTORIES(${SWIG_MODULE_bodyPY_REAL_NAME} PRIVATE "${PYTHON_INCLUDE_DIR}")
+  SET_TARGET_PROPERTIES(${SWIG_MODULE_bodyPY_REAL_NAME} PROPERTIES
+    OUTPUT_NAME "_body"
     LIBRARY_OUTPUT_DIRECTORY "${OPENMA_EXECUTABLE_PATH}/swig/python/openma/ma")
 ENDIF()
