--- a/modules/instrument/swig/CMakeLists.txt
+++ b/modules/instrument/swig/CMakeLists.txt
@@ -39,15 +39,16 @@ IF(BUILD_PYTHON_BINDINGS)
   SET(BASE_PYTHON_SRCS
     "instrument.i")
   SET(CMAKE_SWIG_OUTDIR "${OPENMA_EXECUTABLE_PATH}/swig/python/openma/ma")
-  SET(SWIG_MODULE_instrument_EXTRA_DEPS
+  SET(SWIG_MODULE_instrumentPY_EXTRA_DEPS
     ${SWIG_MODULE_instrument_EXTRA_SRCS}
     "instrument_python.i")
-  SET(SWIG_MODULE_instrument_EXTRA_FLAGS
+  SET(SWIG_MODULE_instrumentPY_EXTRA_FLAGS
     ${SWIG_MODULE_instrument_EXTRA_FLAGS}
     "-I${SWIG_DIR}/Lib/python")
-  SWIG_ADD_MODULE(instrument python "${BASE_PYTHON_SRCS}")
-  SWIG_LINK_LIBRARIES(instrument instrument bindings ${PYTHON_LIBRARY})
-  TARGET_INCLUDE_DIRECTORIES(${SWIG_MODULE_instrument_REAL_NAME} PRIVATE "${PYTHON_INCLUDE_DIR}")
-  SET_TARGET_PROPERTIES(${SWIG_MODULE_instrument_REAL_NAME} PROPERTIES
+  SWIG_ADD_MODULE(instrumentPY python "${BASE_PYTHON_SRCS}")
+  SWIG_LINK_LIBRARIES(instrumentPY instrument bindings ${PYTHON_LIBRARY})
+  TARGET_INCLUDE_DIRECTORIES(${SWIG_MODULE_instrumentPY_REAL_NAME} PRIVATE "${PYTHON_INCLUDE_DIR}")
+  SET_TARGET_PROPERTIES(${SWIG_MODULE_instrumentPY_REAL_NAME} PROPERTIES
+    OUTPUT_NAME "_instrument"
     LIBRARY_OUTPUT_DIRECTORY "${OPENMA_EXECUTABLE_PATH}/swig/python/openma/ma")
 ENDIF()
