--- a/modules/processing/swig/CMakeLists.txt
+++ b/modules/processing/swig/CMakeLists.txt
@@ -33,15 +33,16 @@ IF(BUILD_PYTHON_BINDINGS)
   SET(PROCESSING_PYTHON_SRCS
     "processing.i")
   SET(CMAKE_SWIG_OUTDIR "${OPENMA_EXECUTABLE_PATH}/swig/python/openma/ma")
-  SET(SWIG_MODULE_processing_EXTRA_DEPS
+  SET(SWIG_MODULE_processingPY_EXTRA_DEPS
     ${SWIG_MODULE_processing_EXTRA_SRCS}
     "processing_python.i")
-  SET(SWIG_MODULE_processing_EXTRA_FLAGS
+  SET(SWIG_MODULE_processingPY_EXTRA_FLAGS
     ${SWIG_MODULE_processing_EXTRA_FLAGS}
     "-I${SWIG_DIR}/Lib/python")
-  SWIG_ADD_MODULE(processing python "${PROCESSING_PYTHON_SRCS}")
-  SWIG_LINK_LIBRARIES(processing processing bindings ${PYTHON_LIBRARY})
-  TARGET_INCLUDE_DIRECTORIES(${SWIG_MODULE_processing_REAL_NAME} PRIVATE "${PYTHON_INCLUDE_DIR}")
-  SET_TARGET_PROPERTIES(${SWIG_MODULE_processing_REAL_NAME} PROPERTIES
+  SWIG_ADD_MODULE(processingPY python "${PROCESSING_PYTHON_SRCS}")
+  SWIG_LINK_LIBRARIES(processingPY processing bindings ${PYTHON_LIBRARY})
+  TARGET_INCLUDE_DIRECTORIES(${SWIG_MODULE_processingPY_REAL_NAME} PRIVATE "${PYTHON_INCLUDE_DIR}")
+  SET_TARGET_PROPERTIES(${SWIG_MODULE_processingPY_REAL_NAME} PROPERTIES
+    OUTPUT_NAME "_processing"
     LIBRARY_OUTPUT_DIRECTORY "${OPENMA_EXECUTABLE_PATH}/swig/python/openma/ma")
 ENDIF()
