Test the implementation of custom (inheriting) type for Eigen.

--- a/3rdparty/eigen3/test/CMakeLists.txt
+++ b/3rdparty/eigen3/test/CMakeLists.txt
@@ -1,13 +1,14 @@
 SET(EIGEN_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/3rdparty/eigen3")
 
-ADD_CXX_CATCH_DRIVER(eigen_comb combTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
-ADD_CXX_CATCH_DRIVER(eigen_cumtrapz cumtrapzTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
-ADD_CXX_CXXTEST_DRIVER(eigen_filter filterTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
-ADD_CXX_CXXTEST_DRIVER(eigen_filtfilt filtfiltTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
-ADD_CXX_CXXTEST_DRIVER(eigen_gammalb gammalnTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
-ADD_CXX_CXXTEST_DRIVER(eigen_iirfilterdesign iirFilterDesignTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
-ADD_CXX_CXXTEST_DRIVER(eigen_interp1 interp1Test.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
-ADD_CXX_CXXTEST_DRIVER(eigen_median medianTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
-ADD_CXX_CXXTEST_DRIVER(eigen_percentile percentileTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
-ADD_CXX_CXXTEST_DRIVER(eigen_sign signTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
-ADD_CXX_CXXTEST_DRIVER(eigen_std stdTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
+ADD_CXXTEST_TESTDRIVER(eigen_comb combTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
+ADD_CXXTEST_TESTDRIVER(eigen_cumtrapz cumtrapzTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
+ADD_CXXTEST_TESTDRIVER(eigen_customtype customTypeTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
+ADD_CXXTEST_TESTDRIVER(eigen_filter filterTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
+ADD_CXXTEST_TESTDRIVER(eigen_filtfilt filtfiltTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
+ADD_CXXTEST_TESTDRIVER(eigen_gammalb gammalnTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
+ADD_CXXTEST_TESTDRIVER(eigen_iirfilterdesign iirFilterDesignTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
+ADD_CXXTEST_TESTDRIVER(eigen_interp1 interp1Test.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
+ADD_CXXTEST_TESTDRIVER(eigen_median medianTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
+ADD_CXXTEST_TESTDRIVER(eigen_percentile percentileTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
+ADD_CXXTEST_TESTDRIVER(eigen_sign signTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
+ADD_CXXTEST_TESTDRIVER(eigen_std stdTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
