--- a/modules/body/test/c++/CMakeLists.txt
+++ b/modules/body/test/c++/CMakeLists.txt
@@ -1,29 +1,29 @@
 SET(_TEST_IO_CPP_DIR "${OPENMA_BINARY_DIR}/modules/io/test/c++")
 
-ADD_CXXTEST_TESTDRIVER(openma_body_anchor anchorTest.cpp body)
-ADD_CXXTEST_TESTDRIVER(openma_body_chain chainTest.cpp body)
-ADD_CXXTEST_TESTDRIVER(openma_body_dynamicdescriptor dynamicdescriptorTest.cpp body)
-ADD_CXXTEST_TESTDRIVER(openma_body_dempstertable dempstertableTest.cpp body)
-ADD_CXXTEST_TESTDRIVER(openma_body_eulerdescriptor eulerdescriptorTest.cpp body)
-ADD_CXXTEST_TESTDRIVER(openma_body_inertialparametersTest inertialparametersTest.cpp body)
-ADD_CXXTEST_TESTDRIVER(openma_body_inversedynamicsmatrix inversedynamicsmatrixTest.cpp body)
-ADD_CXXTEST_TESTDRIVER(openma_body_lyonwholebodymodel_calibration lyonwholebodymodelTest_calibration.cpp INCLUDES ${_TEST_IO_CPP_DIR} LIBRARIES body io)
-ADD_CXXTEST_TESTDRIVER(openma_body_lyonwholebodymodel_reconstruction lyonwholebodymodelTest_reconstruction.cpp INCLUDES ${_TEST_IO_CPP_DIR} LIBRARIES body io)
-ADD_CXXTEST_TESTDRIVER(openma_body_lyonwholebodymodel_kinematics lyonwholebodymodelTest_kinematics.cpp INCLUDES ${_TEST_IO_CPP_DIR} LIBRARIES body io)
-ADD_CXXTEST_TESTDRIVER(openma_body_lyonwholebodymodel_kinetics lyonwholebodymodelTest_kinetics.cpp INCLUDES ${_TEST_IO_CPP_DIR} LIBRARIES body io)
-ADD_CXXTEST_TESTDRIVER(openma_body_joint jointTest.cpp body)
-ADD_CXXTEST_TESTDRIVER(openma_body_landmarksregistrar landmarksregistrarTest.cpp body)
-ADD_CXXTEST_TESTDRIVER(openma_body_landmarkstranslator landmarkstranslatorTest.cpp body)
-ADD_CXXTEST_TESTDRIVER(openma_body_model modelTest.cpp body)
-ADD_CXXTEST_TESTDRIVER(openma_body_plugingait plugingaitTest.cpp body)
-ADD_CXXTEST_TESTDRIVER(openma_body_plugingait_calibration plugingaitTest_calibration.cpp INCLUDES ${_TEST_IO_CPP_DIR} LIBRARIES body io)
-ADD_CXXTEST_TESTDRIVER(openma_body_plugingait_reconstruction plugingaitTest_reconstruction.cpp INCLUDES ${_TEST_IO_CPP_DIR} LIBRARIES body io)
-ADD_CXXTEST_TESTDRIVER(openma_body_plugingait_kinematics plugingaitTest_kinematics.cpp INCLUDES ${_TEST_IO_CPP_DIR} LIBRARIES body io)
-ADD_CXXTEST_TESTDRIVER(openma_body_plugingait_kinetics plugingaitTest_kinetics.cpp INCLUDES ${_TEST_IO_CPP_DIR} LIBRARIES body io)
-ADD_CXXTEST_TESTDRIVER(openma_body_point pointTest.cpp body)
-ADD_CXXTEST_TESTDRIVER(openma_body_registermarkerclusterTest registermarkerclusterTest.cpp INCLUDES ${_TEST_IO_CPP_DIR} LIBRARIES body io)
-ADD_CXXTEST_TESTDRIVER(openma_body_segment segmentTest.cpp body)
-ADD_CXXTEST_TESTDRIVER(openma_body_simplegaitforceplatetofeetassigner simplegaitforceplatetofeetassignerTest.cpp INCLUDES ${_TEST_IO_CPP_DIR} LIBRARIES body io)
-ADD_CXXTEST_TESTDRIVER(openma_body_skeletonhelper skeletonhelperTest.cpp body)
-ADD_CXXTEST_TESTDRIVER(openma_body_unitquaternionposeestimatorTest unitquaternionposeestimatorTest.cpp INCLUDES ${_TEST_IO_CPP_DIR} LIBRARIES body io)
-ADD_CXXTEST_TESTDRIVER(openma_body_utils utilsTest.cpp body)
+ADD_CXX_CXXTEST_DRIVER(openma_body_anchor anchorTest.cpp body)
+ADD_CXX_CXXTEST_DRIVER(openma_body_chain chainTest.cpp body)
+ADD_CXX_CXXTEST_DRIVER(openma_body_dynamicdescriptor dynamicdescriptorTest.cpp body)
+ADD_CXX_CXXTEST_DRIVER(openma_body_dempstertable dempstertableTest.cpp body)
+ADD_CXX_CXXTEST_DRIVER(openma_body_eulerdescriptor eulerdescriptorTest.cpp body)
+ADD_CXX_CXXTEST_DRIVER(openma_body_inertialparametersTest inertialparametersTest.cpp body)
+ADD_CXX_CXXTEST_DRIVER(openma_body_inversedynamicsmatrix inversedynamicsmatrixTest.cpp body)
+ADD_CXX_CXXTEST_DRIVER(openma_body_lyonwholebodymodel_calibration lyonwholebodymodelTest_calibration.cpp INCLUDES ${_TEST_IO_CPP_DIR} LIBRARIES body io)
+ADD_CXX_CXXTEST_DRIVER(openma_body_lyonwholebodymodel_reconstruction lyonwholebodymodelTest_reconstruction.cpp INCLUDES ${_TEST_IO_CPP_DIR} LIBRARIES body io)
+ADD_CXX_CXXTEST_DRIVER(openma_body_lyonwholebodymodel_kinematics lyonwholebodymodelTest_kinematics.cpp INCLUDES ${_TEST_IO_CPP_DIR} LIBRARIES body io)
+ADD_CXX_CXXTEST_DRIVER(openma_body_lyonwholebodymodel_kinetics lyonwholebodymodelTest_kinetics.cpp INCLUDES ${_TEST_IO_CPP_DIR} LIBRARIES body io)
+ADD_CXX_CXXTEST_DRIVER(openma_body_joint jointTest.cpp body)
+ADD_CXX_CXXTEST_DRIVER(openma_body_landmarksregistrar landmarksregistrarTest.cpp body)
+ADD_CXX_CXXTEST_DRIVER(openma_body_landmarkstranslator landmarkstranslatorTest.cpp body)
+ADD_CXX_CXXTEST_DRIVER(openma_body_model modelTest.cpp body)
+ADD_CXX_CXXTEST_DRIVER(openma_body_plugingait plugingaitTest.cpp body)
+ADD_CXX_CXXTEST_DRIVER(openma_body_plugingait_calibration plugingaitTest_calibration.cpp INCLUDES ${_TEST_IO_CPP_DIR} LIBRARIES body io)
+ADD_CXX_CXXTEST_DRIVER(openma_body_plugingait_reconstruction plugingaitTest_reconstruction.cpp INCLUDES ${_TEST_IO_CPP_DIR} LIBRARIES body io)
+ADD_CXX_CXXTEST_DRIVER(openma_body_plugingait_kinematics plugingaitTest_kinematics.cpp INCLUDES ${_TEST_IO_CPP_DIR} LIBRARIES body io)
+ADD_CXX_CXXTEST_DRIVER(openma_body_plugingait_kinetics plugingaitTest_kinetics.cpp INCLUDES ${_TEST_IO_CPP_DIR} LIBRARIES body io)
+ADD_CXX_CXXTEST_DRIVER(openma_body_point pointTest.cpp body)
+ADD_CXX_CXXTEST_DRIVER(openma_body_registermarkerclusterTest registermarkerclusterTest.cpp INCLUDES ${_TEST_IO_CPP_DIR} LIBRARIES body io)
+ADD_CXX_CXXTEST_DRIVER(openma_body_segment segmentTest.cpp body)
+ADD_CXX_CXXTEST_DRIVER(openma_body_simplegaitforceplatetofeetassigner simplegaitforceplatetofeetassignerTest.cpp INCLUDES ${_TEST_IO_CPP_DIR} LIBRARIES body io)
+ADD_CXX_CXXTEST_DRIVER(openma_body_skeletonhelper skeletonhelperTest.cpp body)
+ADD_CXX_CXXTEST_DRIVER(openma_body_unitquaternionposeestimatorTest unitquaternionposeestimatorTest.cpp INCLUDES ${_TEST_IO_CPP_DIR} LIBRARIES body io)
+ADD_CXX_CXXTEST_DRIVER(openma_body_utils utilsTest.cpp body)
