--- a/modules/io/test/c++/CMakeLists.txt
+++ b/modules/io/test/c++/CMakeLists.txt
@@ -10,11 +10,11 @@ EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E make_directory "${OPENMA_BINARY_DIR}
 # Configure the file paths
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/test_file_path.h.in ${CMAKE_CURRENT_BINARY_DIR}/test_file_path.h)
 
-ADD_CXXTEST_TESTDRIVER(openma_io ioTest.cpp io)
-ADD_CXXTEST_TESTDRIVER(openma_io_binarystream binarystreamTest.cpp io)
-ADD_CXXTEST_TESTDRIVER(openma_io_buffer bufferTest.cpp io)
-ADD_CXXTEST_TESTDRIVER(openma_io_file fileTest.cpp io)
-ADD_CXXTEST_TESTDRIVER(openma_io_handlerplugin handlerpluginTest.cpp io)
-ADD_CXXTEST_TESTDRIVER(openma_io_handlerplugin_reader_bsf trial/bsfreaderTest.cpp io)
-ADD_CXXTEST_TESTDRIVER(openma_io_handlerplugin_reader_c3d trial/c3dreaderTest.cpp io)
-ADD_CXXTEST_TESTDRIVER(openma_io_handlerplugin_writer_c3d trial/c3dwriterTest.cpp io)
+ADD_CXX_CXXTEST_DRIVER(openma_io ioTest.cpp io)
+ADD_CXX_CXXTEST_DRIVER(openma_io_binarystream binarystreamTest.cpp io)
+ADD_CXX_CXXTEST_DRIVER(openma_io_buffer bufferTest.cpp io)
+ADD_CXX_CXXTEST_DRIVER(openma_io_file fileTest.cpp io)
+ADD_CXX_CXXTEST_DRIVER(openma_io_handlerplugin handlerpluginTest.cpp io)
+ADD_CXX_CXXTEST_DRIVER(openma_io_handlerplugin_reader_bsf trial/bsfreaderTest.cpp io)
+ADD_CXX_CXXTEST_DRIVER(openma_io_handlerplugin_reader_c3d trial/c3dreaderTest.cpp io)
+ADD_CXX_CXXTEST_DRIVER(openma_io_handlerplugin_writer_c3d trial/c3dwriterTest.cpp io)
