CMake function 'ADD_PYTHON_TESTDRIVER' renamed 'ADD_PYTHON_UNITTEST_DRIVER'.

--- a/modules/body/test/python/CMakeLists.txt
+++ b/modules/body/test/python/CMakeLists.txt
@@ -2,5 +2,5 @@ SET(PACKAGE_DIRECTORY "${EXECUTABLE_OUTPUT_PATH}/swig/python/openma")
 SET(TESTS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
 SET(PTD_DIRS ${PACKAGE_DIRECTORY} ${TESTS_DIRECTORY} "${CMAKE_BINARY_DIR}/modules/io/test/python")
 
-ADD_PYTHON_TESTDRIVER(python_body_landmarkstranslator landmarkstranslatorTest INCLUDES ${PTD_DIRS})
-ADD_PYTHON_TESTDRIVER(python_body_plugingait plugingaitTest INCLUDES ${PTD_DIRS})
+ADD_PYTHON_UNITTEST_DRIVER(python_body_landmarkstranslator landmarkstranslatorTest INCLUDES ${PTD_DIRS})
+ADD_PYTHON_UNITTEST_DRIVER(python_body_plugingait plugingaitTest INCLUDES ${PTD_DIRS})
