--- a/modules/processing/test/python/CMakeLists.txt
+++ b/modules/processing/test/python/CMakeLists.txt
@@ -2,4 +2,4 @@ SET(PACKAGE_DIRECTORY "${EXECUTABLE_OUTPUT_PATH}/swig/python/openma")
 SET(TESTS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
 SET(PTD_DIRS ${PACKAGE_DIRECTORY} ${TESTS_DIRECTORY})
 
-ADD_PYTHON_TESTDRIVER(python_processing processingTest INCLUDES ${PTD_DIRS})
+ADD_PYTHON_UNITTEST_DRIVER(python_processing processingTest INCLUDES ${PTD_DIRS})
