--- a/modules/io/test/python/CMakeLists.txt
+++ b/modules/io/test/python/CMakeLists.txt
@@ -4,4 +4,4 @@ SET(PTD_DIRS ${PACKAGE_DIRECTORY} ${TESTS_DIRECTORY} "${CMAKE_CURRENT_BINARY_DIR
 
 CONFIGURE_FILE(test_file_path.py.in ${CMAKE_CURRENT_BINARY_DIR}/test_file_path.py)
 
-ADD_PYTHON_TESTDRIVER(python_io ioTest INCLUDES ${PTD_DIRS})
+ADD_PYTHON_UNITTEST_DRIVER(python_io ioTest INCLUDES ${PTD_DIRS})
