CMake function 'ADD_MATLAB_TESTDRIVER' renamed 'ADD_MATLAB_UNITTEST_DRIVER'.

--- a/modules/io/test/matlab/CMakeLists.txt
+++ b/modules/io/test/matlab/CMakeLists.txt
@@ -5,4 +5,4 @@ SET(MTD_DIRS ${TOOLBOX_DIRECTORY} ${TESTS_DIRECTORY} "${CMAKE_CURRENT_BINARY_DIR
 CONFIGURE_FILE(OpenMATDDPathIn.m.in ${CMAKE_CURRENT_BINARY_DIR}/OpenMATDDPathIn.m)
 CONFIGURE_FILE(OpenMATDDPathOut.m.in ${CMAKE_CURRENT_BINARY_DIR}/OpenMATDDPathOut.m)
 
-ADD_MATLAB_TESTDRIVER(matlab_io IOTest.m INCLUDES ${MTD_DIRS})
+ADD_MATLAB_UNITTEST_DRIVER(matlab_io IOTest.m INCLUDES ${MTD_DIRS})
