Test suites 'CombTest' and 'CumtrapzTest' converted to use Catch.

--- a/3rdparty/eigen3/test/CMakeLists.txt
+++ b/3rdparty/eigen3/test/CMakeLists.txt
@@ -1,7 +1,7 @@
 SET(EIGEN_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/3rdparty/eigen3")
 
-ADD_CXX_CXXTEST_DRIVER(eigen_comb combTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
-ADD_CXX_CXXTEST_DRIVER(eigen_cumtrapz cumtrapzTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
+ADD_CXX_CATCH_DRIVER(eigen_comb combTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
+ADD_CXX_CATCH_DRIVER(eigen_cumtrapz cumtrapzTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
 ADD_CXX_CXXTEST_DRIVER(eigen_filter filterTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
 ADD_CXX_CXXTEST_DRIVER(eigen_filtfilt filtfiltTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
 ADD_CXX_CXXTEST_DRIVER(eigen_gammalb gammalnTest.cpp INCLUDES ${EIGEN_INCLUDE_DIR})
