--- a/modules/io/CMakeLists.txt
+++ b/modules/io/CMakeLists.txt
@@ -15,7 +15,7 @@ SET(OPENMA_STATIC_IO_PLUGINS_SRCS "" CACHE INTERNAL "")
 ADD_SUBDIRECTORY("plugins")
 
 ADD_LIBRARY(io ${OPENMA_LIBS_BUILD_TYPE} ${OPENMA_IO_SRCS} ${OPENMA_STATIC_IO_PLUGINS_SRCS})
-TARGET_LINK_LIBRARIES(io instrument)
+TARGET_LINK_LIBRARIES(io instrument pugixml)
 TARGET_INCLUDE_DIRECTORIES(io PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/plugins>
