Preprocessor symbol used for Catch until all the unit tests done with CxxTest are not translated.

--- a/modules/io/test/c++/test_file_path.h.in
+++ b/modules/io/test/c++/test_file_path.h.in
@@ -12,7 +12,12 @@
      
 #define OPENMA_TDD_PATH_OUT(relpath) \
   "${OPENMA_BINARY_DIR}/test/data/output/" relpath
-  
+
+// TODO The following lines must be removed when all the unit test will use Catch (see openma/#78)
+#ifndef TS_ASSERT_EQUALS
+  #define TS_ASSERT_EQUALS(a,b)
+#endif
+
 void generate_trial_from_c3d_file(ma::Node* root, const char* filename)
 {
   ma::io::File file;
