Implementation of the Delsys HPF format parser with unit tests.

--- a/modules/io/test/c++/CMakeLists.txt
+++ b/modules/io/test/c++/CMakeLists.txt
@@ -18,3 +18,4 @@ ADD_CXX_CXXTEST_DRIVER(openma_io_handlerplugin handlerpluginTest.cpp io)
 ADD_CXX_CXXTEST_DRIVER(openma_io_handlerplugin_reader_bsf trial/bsfreaderTest.cpp io)
 ADD_CXX_CXXTEST_DRIVER(openma_io_handlerplugin_reader_c3d trial/c3dreaderTest.cpp io)
 ADD_CXX_CXXTEST_DRIVER(openma_io_handlerplugin_writer_c3d trial/c3dwriterTest.cpp io)
+ADD_CXX_CATCH_DRIVER(openma_io_handlerplugin_reader_hpf trial/hpfreaderTest.cpp io)
