The proposed mechanism to data pugixml does not work under Windows.

--- a/3rdparty/pugixml/CMakeLists.txt
+++ b/3rdparty/pugixml/CMakeLists.txt
@@ -7,8 +7,8 @@ SET(PUGIXML_SRCS
 ADD_LIBRARY(pugixml SHARED ${PUGIXML_SRCS})
 
 TARGET_INCLUDE_DIRECTORIES(pugixml PUBLIC
-  $<BUILD_INTERFACE:${OPENMA_BINARY_DIR}/include>
-  $<BUILD_INTERFACE:${OPENMA_SOURCE_DIR}/3rdparty/pugixml/include>
+  $<BUILD_INTERFACE:${OPENMA_BINARY_DIR}/3rdparty/pugixml>
+  $<BUILD_INTERFACE:${OPENMA_SOURCE_DIR}/3rdparty/pugixml/src>
 )
 
 GENERATE_EXPORT_HEADER(pugixml
